Thu Mar 15 20:01:53 NOVT 2001
max:
free(onlytext) fix in JamWriteMsg() 

Wed Mar 7 20:35:00 MET 2001
og:
* fixed missing parameter in waitlock2() under OS/2 !

Tue Mar 6 20:45:00 MET 2001
og:
* JAM should be now platform independed (works now on SPARC)
* fixed a JAM mem-alloc bug
* modified filelocking for squishbases (added waitlock2()) - seem's to be working !!!!!!!!!!
* fixed tdelay.c for NT/Win32
* mysleep() is no more used (will be removed in the future)
* added alternativ method of Filelocking (via lockfile *.lck - use -DALTLOCKING)
* filelocking is now os-aware under *ix & OS/2 !
* filelocking for other-os's (non *ix & no OS/2) now tries to lock every 1/10 sec.
* some minor changes

Sun Mar  4 17:20:39 NOVT 2001
max:
* fixed GetCtrlToken() - when gets "STR" kludge and
  if "xxxSTR" kludge found before, it returned NULL)

Sun Feb 11 17:16:00 MESZ 2001
oliver grimm:
* Added Filetyping & Attributes for BeOS (SDM Type Areas only)

Fri Jan 26 22:17:15 NOVT 2001
max (patch from Serguei Revtov):
* NOSEMAPHORES on __sun__

Fri Jan 26 03:59:37 EET 2001
gul:
* JAM lost path & seen-by by hpt link fixed

Wed Jan 24 12:08:33 EET 2001
gul:
* JAM write pessage speedup

Sun Dec  3 15:49:42 UTC 2000
sms:
* permissions fix (different permissions for netmail/echomail, but the same
  for all formats) 

Sun Oct 15 20:09:52 MESZ 2000
tobi:
* reduced memory fragmentation in JAM api

Sun Oct 15 19:17:28 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM fixes

Sat Oct 14 23:18:01 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM fix: sqpack don't crashes on areas when msgs deleted from golded
* JAM fix: hpt link works good after deleting msgs from golded

Mon Oct  9 10:10:43 NOVST 2000
max:
* FFindOpen() postfix

----- cvs ci ------
Sat Oct  7 13:53:49 NOVST 2000
max:
* fixed bug in FFindOpen() (path like "/*")

----- cvs ci ------
Tue Oct  3 18:22:25 MSZ 2000
tobi:
* introduced MSGIMM flag in XMSG for use by JAM API

----- cvs ci ------
Tue Oct  3 17:05:57 MSD 2000
Fedor: